# proof-of-concept-trojan-horse

./: CMakeLists.txt  game.cpp  game.h  main.cpp
client/: client.cpp  client.h  game.cpp  game.h
server/: server.cpp  server.h
